--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,4 +1,5 @@
 ---
+import TagList from "../components/TagList.astro";
 import BaseLayout from "./BaseLayout.astro";
 
 const { frontmatter } = Astro.props;
@@ -6,9 +7,12 @@ const { frontmatter } = Astro.props;
 
 <BaseLayout pageTitle={frontmatter.title}>
     <meta charset="utf-8" />
-    <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
+    <p>Published on : {frontmatter.pubDate.toString().slice(0,10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    
+    <TagList tags={frontmatter.tags} />
+
     <slot />
 </BaseLayout>
