--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,6 +40,7 @@ h1 {
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
+    transition: 200ms ease-in-out;
 }
   
 .nav-links a:hover, .nav-links a:focus {
