Astro Islands + Preact component + VanillaJS interactive theme + Content Collection

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const {pageTitle} = Astro.props;
     <Header />
     <h1>{pageTitle}</h1>
 
-    <slot /> <!-- for example here -->
+    <slot /> <!-- insert children of the layout component here -->
     
     <Footer />
     <script>
