--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ const identity = {
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "navy";
@@ -28,6 +28,11 @@ const textCase = "uppercase";
         h1 {
             color: purple;
             font-size: 4rem;
+        }
+
+        /* dark theme color */
+        .dark h1 {
+            color: violet;
         }
         .skill {
             color: var(--skillColor);
