--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,3 +7,9 @@ import Social from './Social.astro';
     <Social platform="github" username="withastro" />
     <Social platform="youtube" username="astrodotbuild" />
 </footer>
+
+<style>
+    footer {
+        margin-top: 50px;
+    }
+</style>
