--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -6,8 +6,9 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
-    <meta charset="utf-8" />
-    <p>Published on : {frontmatter.pubDate.toString().slice(0,10)}</p>
+    <!-- <meta charset="utf-8" /> -->
+    <!-- <p>Published on : {frontmatter.pubDate.toString().slice(0,10)}</p> -->
+    <p>Published on : {frontmatter.pubDate.toLocaleDateString()}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
