--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,12 @@
 ---
+import { getCollection } from "astro:content";
 import BlogPost from "../components/BlogPost.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import "../styles/global.css";
 
-const allPosts = Object.values(import.meta.glob('./posts/*.md', {eager: true}));
+// const allPosts = Object.values(import.meta.glob('./posts/*.md', {eager: true})); // eager: true will avoid lazy loading, but directly store values in one place.
+
+const allPosts = await getCollection("blog");
 
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -17,7 +20,9 @@ const pageTitle = "My Astro Learning Blog";
         
         <!-- {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li> )} -->
 
-        {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} /> )}
+        <!-- {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} /> )} -->
+
+        {allPosts.map((post: any) => <BlogPost url={`/posts/${post.id}`} title={post.data.title} /> )}
     </ul>
 
 </BaseLayout>
