--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,14 +1,16 @@
 ---
+import { getCollection } from "astro:content";
 import BlogPost from "../../components/BlogPost.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro"
 
 export async function getStaticPaths() {
-    const allPosts = Object.values(import.meta.glob("../posts/*.md", {eager: true}));
-    const uniqueTags = [...(new Set(allPosts.map((post:any) => post.frontmatter.tags).flat()))].filter((t:any) => (t!==undefined));
-    return uniqueTags.map((t:string) => {
-        const filteredPosts = allPosts.filter((post:any) => post.frontmatter.tags?.includes(t));
+    // const allPosts = Object.values(import.meta.glob("../posts/*.md", {eager: true}));
+    const allPosts = await getCollection("blog");
+    const uniqueTags = [...(new Set(allPosts.map((post:any) => post.data.tags).flat()))].filter((t:any) => (t!==undefined));
+    return uniqueTags.map((tag:string) => {
+        const filteredPosts = allPosts.filter((post:any) => post.data.tags?.includes(tag));
         return {
-            params: { tag : t },
+            params: { tag },
             props: { posts : filteredPosts }
         };
     })
@@ -21,6 +23,6 @@ const {posts} = Astro.props; // the props we manually passed above
 <BaseLayout pageTitle={tag}>
     <p>Posts tagged with {tag}</p>
     <ul>
-        {posts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+        {posts.map((post: any) => <BlogPost url={`/posts/${post.id}`} title={post.data.title} />)}
     </ul>
 </BaseLayout>
