--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,11 +1,13 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro"
 import TagList from "../../components/TagList.astro";
+import { getCollection } from "astro:content";
 const pageTitle = "Tags Index"
 
-const allPosts = Object.values(import.meta.glob("../posts/*.md", {eager: true}));
+// const allPosts = Object.values(import.meta.glob("../posts/*.md", {eager: true}));
+const allPosts = await getCollection("blog");
 const uniqueTags = [...new Set(
-    allPosts.map((post: any) => (post.frontmatter.tags)).flat()
+    allPosts.map((post: any) => (post.data.tags)).flat()
 )].filter((tag:any) => (tag!==undefined));
 ---
 
